--- a/app/assets/stylesheets/blogposts.css.scss
+++ b/app/assets/stylesheets/blogposts.css.scss
@@ -114,7 +114,7 @@ html,body {
   font-size: 18px; 
   color: #4F4F4F;
   font-weight: 300; 
-  line-height:150%
+  line-height:200%
 }
 .tab { margin-left: 40px; }
 .extraTab { margin-left: 80px; }
@@ -175,7 +175,17 @@ IMG.blogPostImagesToDate{
     margin-right: auto;
     margin-top: -50px;
     width: 200px;
-}    
+}  
+
+IMG.selectingApplicants{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -50px;
+    width: 205px;
+    height: 155px;
+}  
+
 
 IMG.mainBlogpostImage{
     display: block;
@@ -204,7 +214,7 @@ IMG.signupPageimage {
   margin-top: 10px;
   color: #949494 !important;
   font-weight: 300;
-  line-height:120%
+  line-height:150%
 }    
 
 .redirectNotice{
