--- a/app/views/blogsignups/_postsToDate.html.erb
+++ b/app/views/blogsignups/_postsToDate.html.erb
@@ -14,20 +14,20 @@
 
 <div class="row visible-desktop visible-tablet">
   
-  <div class="span3">
+  <div class="span4">
+    <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="selectingApplicants" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
+    <h4 class="text-center"><%= link_to "Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm
+", "/blog/Selecting-Applicants-For-Interviews", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
   </div>
 
-  <div class="span3">
+  <div class="span4">
     <a href="/blog/Life-Hacks-for-Holiday-Season-Productivity"><img style="height: 150px; width: 180px; padding-bottom: 5px;" class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg" /></a>
     <h4 class="text-center"><%= link_to "Life Hacks to Stay Productive During the Holiday Season", "/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
   </div>
 
-  <div class="span3">
+  <div class="span4">
     <a href="blog/highly-coveted-professional-and-academic-positions"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
     <h4 class="text-center"><%= link_to "How We Landed the Following Professional and Academic Opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
-  </div>
-
-  <div class="span3">
   </div>
 
 </div>
@@ -35,22 +35,24 @@
 <!-- MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE -->
 <div class="row visible-mobile hidden-table hidden-desktop">
   
-  <div class="span3">
+  <div class="span4">
+    <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
+    <h4 class="text-center"><%= link_to "Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm
+", "/blog/Selecting-Applicants-For-Interviews", class: 'NoUnderlineForLink mainPostTitleText' %></h4>
   </div>
-
-  <div class="span3">
+  <br>
+  <br>
+  <br>
+  <div class="span4">
     <a href="/blog/Life-Hacks-for-Holiday-Season-Productivity"><img style="height: 150px; width: 180px; padding-bottom: 5px;" class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg" /></a>
     <h4 class="text-center"><%= link_to "Life Hacks to Stay Productive During the Holiday Season", "/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
   </div>
   <br>
   <br>
   <br>
-  <div class="span3">
+  <div class="span4">
     <a href="blog/highly-coveted-professional-and-academic-positions"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
     <h4 class="text-center"><%= link_to "How We Landed the Following Professional and Academic Opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
-  </div>
-
-  <div class="span3">
   </div>
 
 </div>
