--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm') %>
+<% provide(:title, 'Here’s 7 Strategies To Ace Your Next Interview') %>
 
 <!--Put picture for post here -->
 <br>
@@ -9,11 +9,11 @@
 
 
   <div class="span6 visible-desktop visible-tablet">
-    <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
+    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Strategies To Ace Your Next Interview"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/for+evans++7+(1).jpg"  /></a>
   </div>
 
   <div class="span6 visible-mobile hidden-table hidden-desktop">
-    <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="mainBlogpostImage" style="margin-left: -1px;" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
+    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Strategies To Ace Your Next Interview"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/for+evans++7+(1).jpg"  /></a>
   </div>
 
   <div class="span3">
@@ -29,8 +29,7 @@
   </div>
 
   <div class="span10">
-    <h1 class="text-center"><%= link_to "Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm
-", "/blog/Selecting-Applicants-For-Interviews", class: 'NoUnderlineForLink mainPostTitleText' %></h1>
+    <h1 class="text-center"><%= link_to "Here’s 7 Strategies To Ace Your Next Interview", "/blog/Acing-Your-Next-Interview", class: 'NoUnderlineForLink mainPostTitleText' %></h1>
   </div>
 
   <div class="span1">
@@ -72,7 +71,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Selecting-Applicants-For-Interviews">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we selected candidates for interviews...</a></h1>
+    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Acing-Your-Next-Interview">Having participated in over 100 interviews as both interviewees and interviewers, we’ve learned the following strategies that will help you excel in your next interview.</a></h1>
   </div>
 
 
