--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -9,11 +9,7 @@
 
 
   <div class="span6 visible-desktop visible-tablet">
-    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Strategies To Ace Your Next Interview"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/for+evans++7+(1).jpg"  /></a>
-  </div>
-
-  <div class="span6 visible-mobile hidden-table hidden-desktop">
-    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Strategies To Ace Your Next Interview"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/for+evans++7+(1).jpg"  /></a>
+    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Strategies To Ace Your Next Interview"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Interview+Image.jpg"  /></a>
   </div>
 
   <div class="span3">
@@ -71,7 +67,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Acing-Your-Next-Interview">Having participated in over 100 interviews as both interviewees and interviewers, we’ve learned the following strategies that will help you excel in your next interview.</a></h1>
+    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Acing-Your-Next-Interview">Having participated in over 100 interviews as both interviewees and interviewers, we've learned the following strategies that will help you excel.</a></h1>
   </div>
 
 
