--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -67,7 +67,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Acing-Your-Next-Interview">Having participated in over 100 interviews as both interviewees and interviewers, we've learned the following strategies that will help you excel.</a></h1>
+    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Acing-Your-Next-Interview">Having participated in over 100 interviews as both interviewees and interviewers, we've learned the following strategies that will help you excel...</a></h1>
   </div>
 
 
