update share info

--- a/app/views/blogposts/interviewTechniques.html.erb
+++ b/app/views/blogposts/interviewTechniques.html.erb
@@ -79,7 +79,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">Having participated in over 100 interviews as both interviewees and interviewers, we've learned the following strategies that will help you excel.</h1>
+    <h1 class="text-center postPreviewContent">Having participated in over 100 interviews as both interviewees and interviewers, we've learned the following strategies that will help you excel in your next interview...</h1>
 
     
     <hr>
