--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -4,7 +4,7 @@
     
        
     <!--Meta TAGS-->
-    <meta name="description" content="Having been on the interview selection committee at several major firms, we're going to tell you exactly how we selected candidates for interviews...">
+    <meta name="description" content="Having participated in over 100 interviews as both interviewees and interviewers, we've learned the following strategies that will help you excel in your next interview...">
     <link rel="author" href="https://plus.google.com/+MalcolmEvans/">
 
   <% if content_for? :for_socialmedia %>
@@ -13,7 +13,7 @@
 
     <!--Facebook-->
     <meta property="og:type" content="blog"/>
-    <meta property="og:title" content="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm" />
+    <meta property="og:title" content="Here’s 7 Strategies To Ace Your Next Interview" />
     <meta property="fb:admins" content="755565431"/>
     <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png" />
     <meta property="og:url" content="http://www.AdviceShare.co/blog" />
