--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -15,7 +15,7 @@
     <meta property="og:type" content="blog"/>
     <meta property="og:title" content="Here’s 7 Strategies To Ace Your Next Interview" />
     <meta property="fb:admins" content="755565431"/>
-    <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Interview+Image.jpg" />
+    <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/for+evans2+(1).jpg" />
     <meta property="og:url" content="http://www.AdviceShare.co/blog" />
     
     
