--- a/app/views/blogposts/interviewTechniques.html.erb
+++ b/app/views/blogposts/interviewTechniques.html.erb
@@ -16,11 +16,11 @@
   </div>
 
   <div class="span6 visible-desktop visible-tablet">
-    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Techniques To Ace Your Next Interview"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Interview+Image.jpg"  /></a>
+    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Techniques To Ace Your Next Interview"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/for+evans2+(1).jpg"  /></a>
   </div>
 
   <div class="span6 visible-mobile hidden-table hidden-desktop">
-    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Techniques To Ace Your Next Interview"><img class="mainBlogpostImage" style="margin-left: -1px;"  src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Interview+Image.jpg"  /></a>
+    <a href="/blog/Acing-Your-Next-Interview" title="" alt="Here’s 7 Techniques To Ace Your Next Interview"><img class="mainBlogpostImage" style="margin-left: -1px;"  src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/for+evans2+(1).jpg"  /></a>
   </div>
 
   <div class="span3">
